src/test/testFiles/invalid/semanticErrors/incompatibleArrayConstructor.val
let a = Array<Array<number>();